--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="description" content="Historical site for the 1958 Munich Air Disaster & Musuem tour at Old Trafford, Manchester">
+    <meta name="keywords" content="1958 Munich Air Disaster, Musuem tour, Old Trafford, Manchester">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <title>1958 Munich Air Disaster</title>
 </head>
 <body>
     <h1>Hello World</h1>
