Add basic structure for html

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <title>1958 Munich Air Disaster</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <header>1958 Munich Air Disaster</header>
+
+    <section>Hero image</section>
+
+    <section>Overview</section>
+
+    <section>sign up</section>
+
+    <footer>Contact</footer>
 </body>
 </html>
