--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
     <title>1958 Munich Air Disaster</title>
 </head>
 <body>
-    <header>1958 Munich Air Disaster</header>
+    <header>
+        <a href="index.html">
+            <h1>1958 Munich Air Disaster</h1>
+        </a>
+        <nav>
+            <ul>
+                <li>
+                    <a href="#">Contact Us</a>
+                </li>
+                <li>
+                    <a href="#">Sign Up</a>
+                </li>
+                <li>
+                    <a href="#">Overview</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
     <section>Hero image</section>
 
