--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <a href="index.html">
-            <h1>1958 Munich Air Disaster</h1>
+            <h1 id="logo">1958 Munich Air Disaster</h1>
         </a>
         <nav>
             <ul>
