Style navagation links

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1 id="logo">1958 Munich Air Disaster</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li>
                     <a href="#">Contact Us</a>
                 </li>
