--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
         </nav>
     </header>
 
-    <section>Hero image</section>
+    <section id="hero-outer">
+        <div id="hero-image"></div>
+    </section>
 
     <section>Overview</section>
 
