Add overview main structure

--- a/index.html
+++ b/index.html
@@ -37,7 +37,13 @@
         <div id="hero-image"></div>
     </section>
 
-    <section>Overview</section>
+    <section id="overview">
+        <h2>Overview</h2>
+
+        <div id="left-overview">left</div>
+        <div id="right-overview">right</div>
+        <div id="center-overview">center</div>
+    </section>
 
     <section>sign up</section>
 
