Add right and left overview section placeholder content and style

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="#">Overview</a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -38,14 +38,83 @@
     </section>
 
     <section id="overview">
-        <h2>Overview</h2>
+        <h2 id="about">Overview</h2>
 
-        <div id="left-overview">left</div>
-        <div id="right-overview">right</div>
-        <div id="center-overview">center</div>
+        <div id="left-overview">
+            <div class="left-overview-heading">
+                <h2>Background</h2>
+                <hr>
+                <p>
+                    In April 1955, the Union of European Football Associations (UEFA) established the European Cup,
+                    however, the English league winners, Chelsea, were denied entry by the Football League's secretary,
+                    Alan
+                    Hardaker,
+                    who believed not participating was best for English football.
+                    The following season, the English league was won by Manchester United, managed by Matt Busby.
+                    The Football League again denied their champions entry, but Busby and his chairman, Harold Hardman,
+                    with the help of the Football Association's (FA) chairman Stanley Rous,
+                    defied the league and United became the first English team to play in Europe.
+                </p>
+            </div>
+            <div class="left-overview-heading">
+                <h2>Crash</h2>
+                <hr>
+                <p>
+                    Thain had flown the "Elizabethan"-class Airspeed Ambassador (registration G-ALZU) to Belgrade but
+                    handed the controls to Rayment for the return.
+                    [23] At 14:19 GMT, the control tower at Munich was told the plane was ready to take off and gave
+                    clearance for take-off,
+                    expiring at 14:31.[24] Rayment abandoned the take-off after Thain noticed the port boost pressure
+                    gauge fluctuating as the plane reached full
+                    power and the engine sounded odd while accelerating.[25] A second attempt was made three minutes
+                    later, but called off 40 seconds into the attempt
+                </p>
+            </div>
+        </div>
+        <div id="right-overview">
+            <div class="right-overview-heading">
+                <h2>Investigation</h2>
+                <hr>
+                <p>
+                    The crash was originally blamed on pilot error, but it was later found to have been caused by slush
+                    towards the end of the runway, slowing the aircraft and preventing safe flying speed.[56] During take-off,
+                     the aircraft had reached 117 knots (217 km/h), but, on entering the slush, dropped to 105 knots (194 km/h), 
+                     too slow to leave the ground, and with not enough runway to abort the take-off. Aircraft with tail-wheel 
+                     undercarriages had not been greatly affected by slush, due to the geometry of these undercarriages in relation 
+                     to the aircraft's centre of gravity,[notes 1] but newer types, such as the Ambassador, with nose wheel 
+                     landing-gear and the main wheels behind the centre of gravity, were found to be vulnerable.
+                </p>
+            </div>
+            <div class="right-overview-heading">
+                <h2>Aftermath</h2>
+                <hr>
+                <p>
+                    Twenty people, including seven of Manchester United's players, died at the scene of the crash. The 21st victim was Frank Swift, 
+                    a journalist and former goalkeeper who played with Busby at Manchester City; he died on his way to hospital. Duncan Edwards died
+                    from his injuries on 21 February at the Rechts der Isar Hospital in Munich, and the final death toll reached 23 several days later 
+                    when co-pilot Rayment died as a result of serious head injuries.[28] Johnny Berry and Jackie Blanchflower were both injured so 
+                    severely that they never played again.[59] Busby was seriously injured and had to stay in hospital for more than two months after 
+                    the crash, and was given the Last Rites twice.[60] After being discharged from hospital, he went to Switzerland to recuperate in
+                    Interlaken. At times, he felt like giving up football entirely, until he was told by his wife, Jean, "You know Matt, the lads 
+                    would have wanted you to carry on."[61] That statement lifted Busby from his depression, and he returned by land and sea to 
+                    Manchester, before watching his team play in the 1958 FA Cup Final.[61]
+                </p>
+            </div>
+        </div>
+
+        <div id="center-overview">
+            <div>
+                <div></div>
+            </div>
+            <div>
+                <div></div>
+            </div>
+        </div>
     </section>
 
     <section>sign up</section>
+
+    
 
     <footer>Contact</footer>
 </body>
