Add overview central image and style with border

--- a/index.html
+++ b/index.html
@@ -81,8 +81,7 @@
                      the aircraft had reached 117 knots (217 km/h), but, on entering the slush, dropped to 105 knots (194 km/h), 
                      too slow to leave the ground, and with not enough runway to abort the take-off. Aircraft with tail-wheel 
                      undercarriages had not been greatly affected by slush, due to the geometry of these undercarriages in relation 
-                     to the aircraft's centre of gravity,[notes 1] but newer types, such as the Ambassador, with nose wheel 
-                     landing-gear and the main wheels behind the centre of gravity, were found to be vulnerable.
+                     to the aircraft's centre of gravity,[notes 1]
                 </p>
             </div>
             <div class="right-overview-heading">
@@ -94,20 +93,14 @@
                     from his injuries on 21 February at the Rechts der Isar Hospital in Munich, and the final death toll reached 23 several days later 
                     when co-pilot Rayment died as a result of serious head injuries.[28] Johnny Berry and Jackie Blanchflower were both injured so 
                     severely that they never played again.[59] Busby was seriously injured and had to stay in hospital for more than two months after 
-                    the crash, and was given the Last Rites twice.[60] After being discharged from hospital, he went to Switzerland to recuperate in
-                    Interlaken. At times, he felt like giving up football entirely, until he was told by his wife, Jean, "You know Matt, the lads 
-                    would have wanted you to carry on."[61] That statement lifted Busby from his depression, and he returned by land and sea to 
-                    Manchester, before watching his team play in the 1958 FA Cup Final.[61]
+                    the crash, and was given the Last Rites twice.[60]
                 </p>
             </div>
         </div>
 
         <div id="center-overview">
-            <div>
-                <div></div>
-            </div>
-            <div>
-                <div></div>
+            <div id="container">
+                <div id="center-image-one"></div>
             </div>
         </div>
     </section>
