--- a/index.html
+++ b/index.html
@@ -104,11 +104,33 @@
             </div>
         </div>
     </section>
+    <hr>
 
     <section>sign up</section>
 
     
 
-    <footer>Contact</footer>
+    <footer>
+        <ul>
+            <li>
+                <a href="http://facebook.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+            </li>
+            <li>
+                <a href="http://twitter.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+            </li>
+            <li>
+                <a href="http://instagram.com" target="_blank" rel="noopener" 
+                aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+            </li>
+            <li>
+                <a href="http://youtube.com" target="_blank" rel="noopener" 
+                aria-label="Visit our youtube page (opens in new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+            </li>
+        </ul>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/2cc81c8112.js" crossorigin="anonymous"></script>
 </body>
 </html>
