--- a/index.html
+++ b/index.html
@@ -107,11 +107,13 @@
     <hr>
 
     <section>sign up</section>
+    <hr>
 
     
 
     <footer>
-        <ul>
+       
+        <ul class="social-networks">
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener" 
                 aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-square-facebook"></i></a>
