Add footer content and style

--- a/index.html
+++ b/index.html
@@ -112,7 +112,12 @@
     
 
     <footer>
-       
+        <div>
+            <h2>Contact Us</h2>
+            <p>Phone: 0161 676 7770</p>
+            <p>Address: Sir Matt Busby Way, Old Trafford, Stretford, Manchester M16 0RA</p>
+        </div>
+
         <ul class="social-networks">
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener" 
