--- a/index.html
+++ b/index.html
@@ -12,22 +12,22 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
+        <a href="home">
             <h1 id="logo">1958 Munich Air Disaster</h1>
         </a>
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="#">Contact Us</a>
+                    <a href="contact-us">Contact Us</a>
                 </li>
                 <li>
-                    <a href="#">Sign Up</a>
+                    <a href="sign-up">Sign Up</a>
                 </li>
                 <li>
-                    <a href="#">Overview</a>
+                    <a href="overview">Overview</a>
                 </li>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a href="home" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -100,13 +100,14 @@
 
         <div id="center-overview">
             <div id="container">
-                <div id="center-image-one"></div>
+                <div id="center-image-overview"></div>
             </div>
         </div>
     </section>
     <hr>
 
-    <section>sign up</section>
+    <section>
+        sign up</section>
     <hr>
 
     
