Add links to navagation for each section

--- a/index.html
+++ b/index.html
@@ -11,23 +11,22 @@
     <title>1958 Munich Air Disaster</title>
 </head>
 <body>
-    <header>
-        <a href="home">
+    <header id="home">
             <h1 id="logo">1958 Munich Air Disaster</h1>
-        </a>
+        
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="contact-us">Contact Us</a>
+                    <a href="#contact-us">Contact Us</a>
                 </li>
                 <li>
-                    <a href="sign-up">Sign Up</a>
+                    <a href="#sign-up">Sign Up</a>
                 </li>
                 <li>
-                    <a href="overview">Overview</a>
+                    <a href="#overview">Overview</a>
                 </li>
                 <li>
-                    <a href="home" class="active">Home</a>
+                    <a href="#home" class="active">Home</a>
                 </li>
             </ul>
         </nav>
@@ -106,14 +105,15 @@
     </section>
     <hr>
 
-    <section>
-        sign up</section>
+    <section id="sign-up">
+        sign up
+    </section>
     <hr>
 
     
 
     <footer>
-        <div>
+        <div id="contact-us">
             <h2>Contact Us</h2>
             <p>Phone: 0161 676 7770</p>
             <p>Address: Sir Matt Busby Way, Old Trafford, Stretford, Manchester M16 0RA</p>
