Add basic structure and style to form section

--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Historical site for the 1958 Munich Air Disaster & Musuem tour at Old Trafford, Manchester">
+    <meta name="description"
+        content="Historical site for the 1958 Munich Air Disaster & Musuem tour at Old Trafford, Manchester">
     <meta name="keywords" content="1958 Munich Air Disaster, Musuem tour, Old Trafford, Manchester">
 
     <link rel="stylesheet" href="assets/css/style.css">
     <title>1958 Munich Air Disaster</title>
 </head>
+
 <body>
-    <header id="home">
-            <h1 id="logo">1958 Munich Air Disaster</h1>
-        
+    <header>
+        <h1 id="logo">1958 Munich Air Disaster</h1>
+
         <nav>
             <ul id="menu">
                 <li>
@@ -25,9 +28,7 @@
                 <li>
                     <a href="#overview">Overview</a>
                 </li>
-                <li>
-                    <a href="#home" class="active">Home</a>
-                </li>
+
             </ul>
         </nav>
     </header>
@@ -41,7 +42,7 @@
 
         <div id="left-overview">
             <div class="left-overview-heading">
-                <h2>Background</h2>
+                <h3>Background</h3>
                 <hr>
                 <p>
                     In April 1955, the Union of European Football Associations (UEFA) established the European Cup,
@@ -56,7 +57,7 @@
                 </p>
             </div>
             <div class="left-overview-heading">
-                <h2>Crash</h2>
+                <h3>Crash</h3>
                 <hr>
                 <p>
                     Thain had flown the "Elizabethan"-class Airspeed Ambassador (registration G-ALZU) to Belgrade but
@@ -72,26 +73,35 @@
         </div>
         <div id="right-overview">
             <div class="right-overview-heading">
-                <h2>Investigation</h2>
+                <h3>Investigation</h3>
                 <hr>
                 <p>
                     The crash was originally blamed on pilot error, but it was later found to have been caused by slush
-                    towards the end of the runway, slowing the aircraft and preventing safe flying speed.[56] During take-off,
-                     the aircraft had reached 117 knots (217 km/h), but, on entering the slush, dropped to 105 knots (194 km/h), 
-                     too slow to leave the ground, and with not enough runway to abort the take-off. Aircraft with tail-wheel 
-                     undercarriages had not been greatly affected by slush, due to the geometry of these undercarriages in relation 
-                     to the aircraft's centre of gravity,[notes 1]
+                    towards the end of the runway, slowing the aircraft and preventing safe flying speed.[56] During
+                    take-off,
+                    the aircraft had reached 117 knots (217 km/h), but, on entering the slush, dropped to 105 knots (194
+                    km/h),
+                    too slow to leave the ground, and with not enough runway to abort the take-off. Aircraft with
+                    tail-wheel
+                    undercarriages had not been greatly affected by slush, due to the geometry of these undercarriages
+                    in relation
+                    to the aircraft's centre of gravity,[notes 1]
                 </p>
             </div>
             <div class="right-overview-heading">
-                <h2>Aftermath</h2>
+                <h3>Aftermath</h3>
                 <hr>
                 <p>
-                    Twenty people, including seven of Manchester United's players, died at the scene of the crash. The 21st victim was Frank Swift, 
-                    a journalist and former goalkeeper who played with Busby at Manchester City; he died on his way to hospital. Duncan Edwards died
-                    from his injuries on 21 February at the Rechts der Isar Hospital in Munich, and the final death toll reached 23 several days later 
-                    when co-pilot Rayment died as a result of serious head injuries.[28] Johnny Berry and Jackie Blanchflower were both injured so 
-                    severely that they never played again.[59] Busby was seriously injured and had to stay in hospital for more than two months after 
+                    Twenty people, including seven of Manchester United's players, died at the scene of the crash. The
+                    21st victim was Frank Swift,
+                    a journalist and former goalkeeper who played with Busby at Manchester City; he died on his way to
+                    hospital. Duncan Edwards died
+                    from his injuries on 21 February at the Rechts der Isar Hospital in Munich, and the final death toll
+                    reached 23 several days later
+                    when co-pilot Rayment died as a result of serious head injuries.[28] Johnny Berry and Jackie
+                    Blanchflower were both injured so
+                    severely that they never played again.[59] Busby was seriously injured and had to stay in hospital
+                    for more than two months after
                     the crash, and was given the Last Rites twice.[60]
                 </p>
             </div>
@@ -105,12 +115,25 @@
     </section>
     <hr>
 
-    <section id="sign-up">
-        sign up
+    <section id="sign-up" class="form-section">
+
+        <h2>Sign up to the Old Trfford Busby Babes Tour!</h2>
+
+        <form action="" method="post" class="form-input">
+            <label for="fname">First name:</label>
+            <input type="text" id="fname" name="fname" required>
+            <br>
+            <label for="lname">Last name:</label>
+            <input type="text" name="lname" id="lname" required>
+            <br>
+            <label for="email">Email:</label>
+            <input type="email" id="email" name="email" required>
+        </form>
+
     </section>
     <hr>
 
-    
+
 
     <footer>
         <div id="contact-us">
@@ -121,24 +144,29 @@
 
         <ul class="social-networks">
             <li>
-                <a href="http://facebook.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Facebook page (opens in new tab)"><i class="fa-brands fa-square-facebook"></i></a>
+                <a href="http://facebook.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Facebook page (opens in new tab)"><i
+                        class="fa-brands fa-square-facebook"></i></a>
             </li>
             <li>
-                <a href="http://twitter.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Twitter page (opens in new tab)"><i class="fa-brands fa-square-twitter"></i></a>
+                <a href="http://twitter.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Twitter page (opens in new tab)"><i
+                        class="fa-brands fa-square-twitter"></i></a>
             </li>
             <li>
-                <a href="http://instagram.com" target="_blank" rel="noopener" 
-                aria-label="Visit our Instagram page (opens in new tab)"><i class="fa-brands fa-square-instagram"></i></a>
+                <a href="http://instagram.com" target="_blank" rel="noopener"
+                    aria-label="Visit our Instagram page (opens in new tab)"><i
+                        class="fa-brands fa-square-instagram"></i></a>
             </li>
             <li>
-                <a href="http://youtube.com" target="_blank" rel="noopener" 
-                aria-label="Visit our youtube page (opens in new tab)"><i class="fa-brands fa-square-youtube"></i></a>
+                <a href="http://youtube.com" target="_blank" rel="noopener"
+                    aria-label="Visit our youtube page (opens in new tab)"><i
+                        class="fa-brands fa-square-youtube"></i></a>
             </li>
         </ul>
     </footer>
 
     <script src="https://kit.fontawesome.com/2cc81c8112.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
