Add style to form section

--- a/index.html
+++ b/index.html
@@ -115,19 +115,28 @@
     </section>
     <hr>
 
-    <section id="sign-up" class="form-section">
+    <section id="signup-form" class="form-section">
 
         <h2>Sign up to the Old Trfford Busby Babes Tour!</h2>
+        <br>
+        <p>
+            If you would like to explore deeper into the history of the Busby Babes and the tragedy
+            of the Munich Air disaster, why not sign up to one of our tours held at Manchester United's
+            very own Old Trafford stadium. Please complete the form below and
+            you will recieve and email with further information on how to do so if you are interested.
+        </p>
 
         <form action="" method="post" class="form-input">
             <label for="fname">First name:</label>
-            <input type="text" id="fname" name="fname" required>
+            <input class="text-input" type="text" id="fname" name="fname" required>
             <br>
             <label for="lname">Last name:</label>
-            <input type="text" name="lname" id="lname" required>
+            <input class="text-input" type="text" name="lname" id="lname" required>
             <br>
-            <label for="email">Email:</label>
-            <input type="email" id="email" name="email" required>
+            <label for="email">Email Address:</label>
+            <input class="text-input" type="email" id="email" name="email" required>
+            <br>
+            <input class="signup-button" type="submit" value="submit">
         </form>
 
     </section>
