--- a/index.html
+++ b/index.html
@@ -45,29 +45,25 @@
                 <h3>Background</h3>
                 <hr>
                 <p>
-                    In April 1955, the Union of European Football Associations (UEFA) established the European Cup,
-                    however, the English league winners, Chelsea, were denied entry by the Football League's secretary,
-                    Alan
-                    Hardaker,
-                    who believed not participating was best for English football.
-                    The following season, the English league was won by Manchester United, managed by Matt Busby.
-                    The Football League again denied their champions entry, but Busby and his chairman, Harold Hardman,
-                    with the help of the Football Association's (FA) chairman Stanley Rous,
-                    defied the league and United became the first English team to play in Europe.
+                    The Manchester United team were returning from a European Cup match in Belgrade, Yugoslavia (now Serbia), 
+                    having eliminated Red Star Belgrade to advance to the semi-finals of the competition. The flight stopped 
+                    to refuel in Munich because a non-stop flight from Belgrade to Manchester was beyond the range of the Aircraft
+                    carrying the Manchester team and its other passengers.
                 </p>
             </div>
             <div class="left-overview-heading">
                 <h3>Crash</h3>
                 <hr>
                 <p>
-                    Thain had flown the "Elizabethan"-class Airspeed Ambassador (registration G-ALZU) to Belgrade but
-                    handed the controls to Rayment for the return.
-                    [23] At 14:19 GMT, the control tower at Munich was told the plane was ready to take off and gave
-                    clearance for take-off,
-                    expiring at 14:31.[24] Rayment abandoned the take-off after Thain noticed the port boost pressure
-                    gauge fluctuating as the plane reached full
-                    power and the engine sounded odd while accelerating.[25] A second attempt was made three minutes
-                    later, but called off 40 seconds into the attempt
+                    The disaster occurred on 6 February 1958 when the flight
+                    crashed on its third attempt to take off from a runway in Munich. The first attempt was abandoned due 
+                    due to the port boost pressure gauge fluctuating as the plane reached full power and the engine sounding 
+                    odd while accelerating. A second attempt was made three minutes later, but called off after 40 seconds 
+                    because the engines were running on an over-rich mixture, causing them to over accelerate.
+                    After the second attempt, passengers retreated to the airport lounge, however, the passengers were called 
+                    back to the plane 15 minutes after leaving it. On the third and final attempt, the plane threw up slush as 
+                    it gathered speed causing it to skid off the end of the runway and crashing into a nearby house.
+                    
                 </p>
             </div>
         </div>
@@ -76,33 +72,25 @@
                 <h3>Investigation</h3>
                 <hr>
                 <p>
-                    The crash was originally blamed on pilot error, but it was later found to have been caused by slush
-                    towards the end of the runway, slowing the aircraft and preventing safe flying speed.[56] During
-                    take-off,
-                    the aircraft had reached 117 knots (217 km/h), but, on entering the slush, dropped to 105 knots (194
-                    km/h),
-                    too slow to leave the ground, and with not enough runway to abort the take-off. Aircraft with
-                    tail-wheel
-                    undercarriages had not been greatly affected by slush, due to the geometry of these undercarriages
-                    in relation
-                    to the aircraft's centre of gravity,[notes 1]
+                    There were 44 people on board, 20 of whom died at the scene. The injured, some unconscious, were taken 
+                    to Munich's Rechts der Isar Hospital where three more died, resulting in 23 fatalities with 21 survivors.
+                    Of the Manchester United team, the victims were Geoff Bent, Roger Byrne, Eddie Colman, Duncan Edwards,
+                    Mark Jones, David Pegg, Tommy Taylor, Billy Whelan and the staff included Walter Crickmer, Tom Curry,
+                    Bert Whalley.
+                    An investigation by West German airport authorities originally blamed Thain, saying he did not de-ice
+                    the aircraft's wings, despite eyewitness statements indicating that de-icing was unnecessary. It was 
+                    later established that the crash was caused by the slush on the runway, which slowed the plane too much
+                    to enable take-off. Thain was cleared in 1968, ten years after the incident.
                 </p>
             </div>
             <div class="right-overview-heading">
                 <h3>Aftermath</h3>
                 <hr>
                 <p>
-                    Twenty people, including seven of Manchester United's players, died at the scene of the crash. The
-                    21st victim was Frank Swift,
-                    a journalist and former goalkeeper who played with Busby at Manchester City; he died on his way to
-                    hospital. Duncan Edwards died
-                    from his injuries on 21 February at the Rechts der Isar Hospital in Munich, and the final death toll
-                    reached 23 several days later
-                    when co-pilot Rayment died as a result of serious head injuries.[28] Johnny Berry and Jackie
-                    Blanchflower were both injured so
-                    severely that they never played again.[59] Busby was seriously injured and had to stay in hospital
-                    for more than two months after
-                    the crash, and was given the Last Rites twice.[60]
+                    Due to the nature of the event, there were rumours circulating that the club may fold, but a threadbare 
+                    United team completed the 1957-58 season, with teams such as liverpool and Real Madrid offering players
+                    on Loan. Manchester United would go on to win the European cup 10 years later under the surviving manager
+                    Matt Busby, which proved to the fitting tribute to the victims of 1958.
                 </p>
             </div>
         </div>
@@ -115,26 +103,29 @@
     </section>
     <hr>
 
-    <section id="signup-form" class="form-section">
+    <section id="sign-up" class="form-section">
 
-        <h2>Sign up to the Old Trfford Busby Babes Tour!</h2>
+        <h2>Sign up to the Old Trfford Museum tour!</h2>
         <br>
         <p>
-            If you would like to explore deeper into the history of the Busby Babes and the tragedy
-            of the Munich Air disaster, why not sign up to one of our tours held at Manchester United's
+            If you would like to explore deeper into the history
+            of the tragic Munich Air disaster, why not sign up to one of our tours held at Manchester United's
             very own Old Trafford stadium. Please complete the form below and
             you will recieve and email with further information on how to do so if you are interested.
         </p>
 
-        <form action="" method="post" class="form-input">
+        <form action="#" method="post" class="form-input">
             <label for="fname">First name:</label>
-            <input class="text-input" type="text" id="fname" name="fname" required>
+            <input class="text-input" type="text" id="fname" name="fname" required
+            placeholder="Enter First Name">
             <br>
             <label for="lname">Last name:</label>
-            <input class="text-input" type="text" name="lname" id="lname" required>
+            <input class="text-input" type="text" name="lname" id="lname" required
+            placeholder="Enter Last Name">
             <br>
             <label for="email">Email Address:</label>
-            <input class="text-input" type="email" id="email" name="email" required>
+            <input class="text-input" type="email" id="email" name="email" required
+            placeholder="Enter Email Address">
             <br>
             <input class="signup-button" type="submit" value="submit">
         </form>
