Add style to input section of the form

--- a/index.html
+++ b/index.html
@@ -33,9 +33,13 @@
         </nav>
     </header>
 
+    <hr>
+
     <section id="hero-outer">
         <div id="hero-image"></div>
     </section>
+
+    <hr>
 
     <section id="overview">
         <h2 id="about">Overview</h2>
@@ -45,9 +49,12 @@
                 <h3>Background</h3>
                 <hr>
                 <p>
-                    The Manchester United team were returning from a European Cup match in Belgrade, Yugoslavia (now Serbia), 
-                    having eliminated Red Star Belgrade to advance to the semi-finals of the competition. The flight stopped 
-                    to refuel in Munich because a non-stop flight from Belgrade to Manchester was beyond the range of the Aircraft
+                    The Manchester United team were returning from a European Cup match in Belgrade, Yugoslavia (now
+                    Serbia),
+                    having eliminated Red Star Belgrade to advance to the semi-finals of the competition. The flight
+                    stopped
+                    to refuel in Munich because a non-stop flight from Belgrade to Manchester was beyond the range of
+                    the Aircraft
                     carrying the Manchester team and its other passengers.
                 </p>
             </div>
@@ -56,14 +63,19 @@
                 <hr>
                 <p>
                     The disaster occurred on 6 February 1958 when the flight
-                    crashed on its third attempt to take off from a runway in Munich. The first attempt was abandoned due 
-                    due to the port boost pressure gauge fluctuating as the plane reached full power and the engine sounding 
-                    odd while accelerating. A second attempt was made three minutes later, but called off after 40 seconds 
+                    crashed on its third attempt to take off from a runway in Munich. The first attempt was abandoned
+                    due
+                    due to the port boost pressure gauge fluctuating as the plane reached full power and the engine
+                    sounding
+                    odd while accelerating. A second attempt was made three minutes later, but called off after 40
+                    seconds
                     because the engines were running on an over-rich mixture, causing them to over accelerate.
-                    After the second attempt, passengers retreated to the airport lounge, however, the passengers were called 
-                    back to the plane 15 minutes after leaving it. On the third and final attempt, the plane threw up slush as 
+                    After the second attempt, passengers retreated to the airport lounge, however, the passengers were
+                    called
+                    back to the plane 15 minutes after leaving it. On the third and final attempt, the plane threw up
+                    slush as
                     it gathered speed causing it to skid off the end of the runway and crashing into a nearby house.
-                    
+
                 </p>
             </div>
         </div>
@@ -72,14 +84,20 @@
                 <h3>Investigation</h3>
                 <hr>
                 <p>
-                    There were 44 people on board, 20 of whom died at the scene. The injured, some unconscious, were taken 
-                    to Munich's Rechts der Isar Hospital where three more died, resulting in 23 fatalities with 21 survivors.
-                    Of the Manchester United team, the victims were Geoff Bent, Roger Byrne, Eddie Colman, Duncan Edwards,
-                    Mark Jones, David Pegg, Tommy Taylor, Billy Whelan and the staff included Walter Crickmer, Tom Curry,
+                    There were 44 people on board, 20 of whom died at the scene. The injured, some unconscious, were
+                    taken
+                    to Munich's Rechts der Isar Hospital where three more died, resulting in 23 fatalities with 21
+                    survivors.
+                    Of the Manchester United team, the victims were Geoff Bent, Roger Byrne, Eddie Colman, Duncan
+                    Edwards,
+                    Mark Jones, David Pegg, Tommy Taylor, Billy Whelan and the staff included Walter Crickmer, Tom
+                    Curry,
                     Bert Whalley.
-                    An investigation by West German airport authorities originally blamed Thain, saying he did not de-ice
-                    the aircraft's wings, despite eyewitness statements indicating that de-icing was unnecessary. It was 
-                    later established that the crash was caused by the slush on the runway, which slowed the plane too much
+                    An investigation by West German airport authorities originally blamed Thain, saying he did not
+                    de-ice
+                    the aircraft's wings, despite eyewitness statements indicating that de-icing was unnecessary. It was
+                    later established that the crash was caused by the slush on the runway, which slowed the plane too
+                    much
                     to enable take-off. Thain was cleared in 1968, ten years after the incident.
                 </p>
             </div>
@@ -87,9 +105,12 @@
                 <h3>Aftermath</h3>
                 <hr>
                 <p>
-                    Due to the nature of the event, there were rumours circulating that the club may fold, but a threadbare 
-                    United team completed the 1957-58 season, with teams such as liverpool and Real Madrid offering players
-                    on Loan. Manchester United would go on to win the European cup 10 years later under the surviving manager
+                    Due to the nature of the event, there were rumours circulating that the club may fold, but a
+                    threadbare
+                    United team completed the 1957-58 season, with teams such as liverpool and Real Madrid offering
+                    players
+                    on Loan. Manchester United would go on to win the European cup 10 years later under the surviving
+                    manager
                     Matt Busby, which proved to the fitting tribute to the victims of 1958.
                 </p>
             </div>
@@ -105,7 +126,7 @@
 
     <section id="sign-up" class="form-section">
 
-        <h2>Sign up to the Old Trfford Museum tour!</h2>
+        <h2>Sign up to the Old Trafford Museum tour!</h2>
         <br>
         <p>
             If you would like to explore deeper into the history
@@ -114,21 +135,21 @@
             you will recieve and email with further information on how to do so if you are interested.
         </p>
 
-        <form action="#" method="post" class="form-input">
-            <label for="fname">First name:</label>
-            <input class="text-input" type="text" id="fname" name="fname" required
-            placeholder="Enter First Name">
-            <br>
-            <label for="lname">Last name:</label>
-            <input class="text-input" type="text" name="lname" id="lname" required
-            placeholder="Enter Last Name">
-            <br>
-            <label for="email">Email Address:</label>
-            <input class="text-input" type="email" id="email" name="email" required
-            placeholder="Enter Email Address">
-            <br>
-            <input class="signup-button" type="submit" value="submit">
-        </form>
+        <div class="form-input" >
+            <form action="#" method="post">
+                <label for="fname">First name:</label>
+                <input class="text-input" type="text" id="fname" name="fname" required placeholder="Enter First Name">
+                <br>
+                <label for="lname">Last name:</label>
+                <input class="text-input" type="text" name="lname" id="lname" required placeholder="Enter Last Name">
+                <br>
+                <label for="email">Email Address:</label>
+                <input class="text-input" type="email" id="email" name="email" required
+                    placeholder="Enter Email Address">
+                <br>
+                <input id="signup-button" type="submit" value="submit">
+            </form>
+        </div>
 
     </section>
     <hr>
