Add comments to index.html

--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
     <meta name="description"
         content="Historical site for the 1958 Munich Air Disaster & Musuem tour at Old Trafford, Manchester">
     <meta name="keywords" content="1958 Munich Air Disaster, Musuem tour, Old Trafford, Manchester">
-
+<!-- Stylesheet -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>1958 Munich Air Disaster</title>
 </head>
 
 <body>
+    <!-- header and nav bar -->
     <header>
         <h1 id="logo">1958 Munich Air Disaster</h1>
 
@@ -34,13 +35,13 @@
     </header>
 
     <hr>
-
+<!-- landing image -->
     <section id="hero-outer">
         <div id="hero-image"></div>
     </section>
 
     <hr>
-
+<!-- Overview section -->
     <section id="overview">
         <h2 id="about">Overview</h2>
 
@@ -115,7 +116,7 @@
                 </p>
             </div>
         </div>
-
+<!-- center image of overview section -->
         <div id="center-overview">
             <div id="container">
                 <div id="center-image-overview"></div>
@@ -123,7 +124,7 @@
         </div>
     </section>
     <hr>
-
+<!-- form section -->
     <section id="sign-up" class="form-section">
 
         <h2>Sign up to the Old Trafford Museum tour!</h2>
@@ -153,16 +154,14 @@
 
     </section>
     <hr>
-
-
-
+<!-- footer -->
     <footer>
         <div id="contact-us">
             <h2>Contact Us</h2>
             <p>Phone: 0161 676 7770</p>
             <p>Address: Sir Matt Busby Way, Old Trafford, Stretford, Manchester M16 0RA</p>
         </div>
-
+<!-- social media links -->
         <ul class="social-networks">
             <li>
                 <a href="http://facebook.com" target="_blank" rel="noopener"
