remove div surrounding form

--- a/index.html
+++ b/index.html
@@ -136,8 +136,7 @@
             you will recieve and email with further information on how to do so if you are interested.
         </p>
 
-        <div class="form-input" >
-            <form action="#" method="post">
+            <form action=""https://formdump.codeinstitute.net/"" class="form-input" method="post">
                 <label for="fname">First name:</label>
                 <input class="text-input" type="text" id="fname" name="fname" required placeholder="Enter First Name">
                 <br>
@@ -150,7 +149,6 @@
                 <br>
                 <input id="signup-button" type="submit" value="submit">
             </form>
-        </div>
 
     </section>
     <hr>
