--- a/index.html
+++ b/index.html
@@ -120,7 +120,6 @@
     <section id="sign-up" class="form-section">
 
         <h2>Sign up to the Old Trafford Museum tour!</h2>
-        <br>
         <p>
             If you would like to explore deeper into the history
             of the tragic Munich Air disaster, why not sign up to one of our tours held at Manchester United's
@@ -128,7 +127,7 @@
             you will recieve and email with further information on how to do so if you are interested.
         </p>
 
-        <form action="" https://formdump.codeinstitute.net/"" class="form-input" method="post">
+        <form action="https://formdump.codeinstitute.net/" class="form-input" method="POSt">
             <label for="fname">First name:</label>
             <input class="text-input" type="text" id="fname" name="fname" required placeholder="Enter First Name">
             <br>
