--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <div id="center-overview">
             <div id="container">
-                <div id="center-image-overview"></div>
+                <div id="center-image-overview" alt="1958-munich-air-crash"></div>
             </div>
         </div>
         
@@ -69,7 +69,6 @@
                 <p>
                     The disaster occurred on 6 February 1958 when the flight
                     crashed on its third attempt to take off from a runway in Munich. The first attempt was abandoned
-                    due
                     due to the port boost pressure gauge fluctuating as the plane reached full power and the engine
                     sounding
                     odd while accelerating. A second attempt was made three minutes later, but called off after 40
